One correction to dark mode CSS changes

--- a/inform7/Internal/HTML/macos-platform.css
+++ b/inform7/Internal/HTML/macos-platform.css
@@ -160,7 +160,7 @@ span.extensioncensusentry {
 }
 
 span.extensionindexentry {
-    color: #404040;
+    color: var(--extension-index-entry-colour);
 }
 
 span.extensionindexerror {
